<resources>
    <!--I should use English translate here, Maybe someDay I will fix this error-->
    <string name="app_name">Bgm38</string>

    <!-- NavigationView -->
    <string name="nav_my_collection">我的进度</string>
    <string name="nav_daily_calendar">每日放送</string>
    <string name="nav_search">搜索</string>
    <string name="nav_filter">筛选</string>
    <string name="nav_ultra_expand">超展开</string>
    <string name="nav_about">关于</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_setting">设置</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="calender_bangumi_img">calender_bangumi_img</string>

    <!-- 每日放送 -->
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="score_average">评分: %1$s / 排名: %2$s</string>

    <string name="update_failed">更新失败</string>
    <string name="update_retry">重试</string>

    <!-- 番剧详情 -->
    <string name="bangumi_detail_title">详情</string>
    <string name="bangumi_detail_more">更多 &gt; </string>
    <string name="bangumi_detail_init_error">初始化失败</string>
    <string name="bangumi_detail_summary">剧情概览</string>
    <string name="bangumi_detail_content">简介及制作人员</string>
    <string name="bangumi_detail_character">角色介绍</string>
    <string name="bangumi_detail_air_day">放送日期: %1$s</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="rate_number_hint">评分</string>
    <string name="rate_text_hint">我要吐槽</string>
    <string name="want_see">状态</string>
    <string name="update_comment">评论已提交</string>
    <string name="not_display_yet">还没放送哦！</string>
    <string name="progress_updated">进度已更新</string>
    <string name="my_comment">我的评价</string>
    <string name="rating_number_max">评分不能大于10</string>
    <string name="progress_updating">进度更新中</string>
    <string name="tags">大家的标注 : %1$s</string>
    <string name="score">评分 : %1$s</string>
    <string name="bangumi_persons">制作人员</string>
    <string name="bangumi_type">类别</string>

    <!-- 登录 -->
    <string name="login_email_hint">邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="login_hint">App 内不提供注册功能，请先网页上注册！点我去注册</string>
    <string name="login_fail">登录失败</string>
    <string name="not_login_hint">还没登录呢！</string>
    <string name="login_doing">登录中.....</string>
    <string name="already_login">已经登录了</string>
    <string name="email_input_hint">请输入邮箱</string>
    <string name="password_input_hint">请输入密码</string>

    <!-- collection -->
    <string name="get_retry">点击重试</string>
    <string name="collection_fail">获取失败</string>

    <!-- 搜索 -->
    <string name="search">搜索</string>
    <string name="search_error">搜索失败</string>
    <string name="search_nothing">搜索的内容不存在</string>
    <string name="search_null_hint">请输入搜索内容</string>
    <string name="search_api_limit">共 %1$d 条数据,api限制只显示%2$d 条</string>
    <string name="search_type">类型 : %1$s</string>

    <!-- 退出登录 -->
    <string name="logout_title">退出登录</string>
    <string name="logout_content">确认要退出登录么？</string>
    <string name="logout_confirm">确认</string>
    <string name="logout_cancel">取消</string>

    <!-- 关于-->
    <string name="about">关于</string>
    <string name="version_info">版本: %1$s</string>
    <string name="about_detail">Bangumi 是由 Sai 于桂林发起的 ACG 分享与交流项目，致力于让阿宅们在欣赏ACG作品之余拥有一个轻松便捷独特的交流与沟通环境。\n \n本 App 部分界面参考了 scarletsky 的  Bangumi-Android 项目，并使用了其中部分资源，图标由 奈白不弍 设计，非常感谢！\n\n如果在使用过程中遇到什么问题，欢迎戳下面的微博反馈！\n</string>
    <string name="sina_weibo">新浪微博: \@熊胖胖x</string>
    <string name="visit_github_title">Github 源码</string>
    <string name="visit_github_detail">项目在 Github 以 Apache 协议开源，欢迎各位提 Issues 或者 Star </string>
    <string name="open_source_title">本项目用到了下列开源项目</string>
    <string name="weibo_url">http://weibo.com/xiongzba</string>
    <string name="github_url">https://github.com/zubinxiong/BangumiTV</string>
    <string name="open_source_list">square/okhttp \nsquare/retrofit \nsquare/picasso  \ngreenrobot/greenDAO \nhdodenhof/CircleImageView \nscarletsky/Bangumi-Android \nJakeWharton/RxBinding \nReactiveX/RxJava \nfranmontiel/PersistentCookieJar \ntbruyelle/RxPermissions \ndrakeet/MultiType \nAnderWeb/discreteSeekBar</string>
    <string name="donation_title">捐赠</string>
    <string name="donation_content">如果您觉得 Bgm38 还不错并对你有用，可以进行打赏支持\n\n注意捐赠并不会会有什么功能上的变化也不能让版本更新更快，只是对我的业余的开发的一种鼓励，并不保证未来的版本会支持您当前的系统版本。谢谢！\n\n支付宝: 912876635@qq.com (长按复制)</string>
    <string name="donation_hint">邮箱已复制到粘贴板中，可前往支付宝捐赠，感谢支持！</string>

    <string name="share">分享</string>

    <string name="watch_progress">观看进度</string>
    <string name="init_failed">初始化失败，请稍后重试</string>

    <string name="save_picture">保存</string>
    <string name="save_disable">默认图片不能保存 = =</string>
    <string name="write_to_sdcard">保存图片到 SD 卡</string>
    <string name="save_ok">图片已保存在 SD 卡 Download 目录</string>
    <string name="save_failed">图片保存失败</string>
    <string name="image_already_exist">图片已保存在 SD 卡 Download 目录</string>
    <string name="permission_retry_title">保存图片到 SD 卡需要存储权限</string>
    <string name="permission_go">去开启</string>

    <string name="send_intent_title">分享给</string>
    <string name="wait_for_loading">请加载完成后再试</string>
    <string-array name="spinner_name">
        <item>想看</item>
        <item>看过</item>
        <item>在看</item>
        <item>搁置</item>
        <item>弃番</item>
    </string-array>

    <string-array name="spinner_value">
        <item>wish</item>
        <item>collect</item>
        <item>do</item>
        <item>on_hold</item>
        <item>dropped</item>
    </string-array>

    <string-array name="bottom_sheet_name">
        <item>想看</item>
        <item>看过</item>
        <item>抛弃</item>
        <item>撤销</item>
        <item>去超展开看大家的讨论_(:з」∠)_</item>
    </string-array>

    <string-array name="bottom_sheet_value">
        <item>queue</item>
        <item>watched</item>
        <item>drop</item>
        <item>remove</item>
    </string-array>

    <string name="anime">动画</string>
    <string name="book">图书</string>
    <string name="game">游戏</string>
    <string name="music">音乐</string>
    <string name="real">电视剧</string>

    <string-array name="filter_name">
        <item>动画</item>
        <item>图书</item>
        <item>游戏</item>
        <item>音乐</item>
        <item>电视剧</item>
    </string-array>

    <string-array name="filter_value">
        <item>anime</item>
        <item>book</item>
        <item>game</item>
        <item>music</item>
        <item>real</item>
    </string-array>


    <!--footer-->
    <string name="list_footer_loading">正在加载下一页_(:з”∠)_</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经没有更多数据了_(:з”∠)_</string>

</resources>
