<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:text="@string/want_see"
       android:paddingLeft="6dp"
       android:textSize="@dimen/calender_item_outline_size"
       android:layout_marginTop="10dp"
       android:textColor="@color/colorAccent"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

   <android.support.v7.widget.AppCompatSpinner
       android:id="@+id/spanner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/rate_number"
       android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <EditText
          android:inputType="number"
          android:hint="@string/rate_number_hint"
          android:maxLines="1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/rate_detail"
       android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <EditText
          android:inputType="textMultiLine"
          android:hint="@string/rate_text_hint"
          android:scrollHorizontally="false"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

   </android.support.design.widget.TextInputLayout>

</LinearLayout>